# PyTorch

./: pyproject.toml
ANN/: ann_classify.py  ann_comparingNumberofHiddenUnits.py  ann_iris.py  ann_learningrate.py  ann_multilayer.py  ann_regression.py
CNN/: rdc_cnn.py
CNN/Convolution/: convolution.py
Gradient Descent/: challenge1.py  gradientDescent.py  gradientDescent1D.py  gradientDescent2D.py
LeNet & AlexNet/: main.py
Python/: booleans.py  dictionaries.py  flow_control.py  functions.py  indexing.py  list_1.py  tuples.py
Regularization/Dropout/: ann_dropout.py  dropout.py
Regularization/L1-2/: L2 Regularization.py
math/: argmax.py  derivatives.py  dotProcut.py  entropy.py  log.py  matrixMult.py  meanVariance.py  randomSeed.py  sampling.py  softmax.py  transpose.py  ttest.py
