[tool.poetry]
name = "pytorch"
version = "0.1.0"
description = ""
authors = ["Fatih  Serdar Aydemir <serdaraydemr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
torch = "^2.4.0"
torchvision = "^0.19.0"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"